--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Winnie Bosibori</title>
     <link rel="icon" type="image/png" sizes="16x16" href="/Assests/Images/favicon-16x16.png">
     <link rel="stylesheet" href="index.css">
-
 </head>
 
 <body>
@@ -56,21 +55,6 @@
             </section>
         </header>
 
-
-
-        <section class="social-media-links social-media-links-mobile" aria-label="Social Media links">
-            <!-- social media navigation -->
-            <a href="https://www.linkedin.com/in/winnie-bosibori-b37601141/">
-                <img class="img-1" src="Assests/Images/6214710_linkedin_logo_icon.svg" alt="My_LinkedIn_profile">
-            </a>
-            <a href="https://github.com/winniebosy" target="_blank" rel="noopener noreferrer">
-                <img class="img-1" src="Assests/Images/8666686_github_icon.svg" alt="My_github_profile">
-            </a>
-            <a href="https://codepen.io/winysummer" target="_blank" rel="noopener noreferrer">
-                <img class="img-1" src="Assests/Images/2701148_code_codepen_css_html_javascript_icon.svg" alt="my_codepen_profile">
-            </a>
-            <div></div>
-        </section>
         <!-- main content -->
 
         <main id="main" aria-labelledby="main-section-heading">
@@ -136,20 +120,11 @@
                     <div class="card-one-imgOne" role="img" aria-label="A fictional architectural firm website"></div>
                     <div class="card-body">
                         <h3 id="card-one-title">Archdigest Firm</h3>
-                        <span>
-                                    <span>Project Description:</span> A fictional website for an architectural firm where customers can view the architectural products and design services offered by the company.</span>
-                        <h2 id="card-one-title">Archdigest Firm</h2>
-                        <p>
-                            <span>Project Description:</span> A fictional website for an architectural firm where customers can view the architectural products and design services offered by the company.
-                        </p>
-                        <p>
-                            <span>Technologies:</span> HTML(5), CSS3 grid and Flexbox, Javascript, WAI-ARIA techniques,Responsive, Keyboard Interactivity.
-                        </p>
+                        <p><span>Project Description:</span>A fictional website for an architectural firm where customers can view the architectural products and design services offered by the company.</p>
+                        <p><span>Technologies:</span> HTML(5), CSS3 grid and Flexbox, Javascript, WAI-ARIA techniques,Responsive, Keyboard Interactivity.</p>
                         <div class="project-links">
                             <a class="card-live-site" href="https://archdigest.netlify.app/" aria-label="Archdigest Live Site">Live Site</a>
                             <a class="card-code-structure" href="https://github.com/winniebosy/Archfirm" aria-label="Archdigest Code Repository">Repository</a>
-                            <a class="card-live-site" href="https://archdigest.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="Archdigest Live Site">Live Site</a>
-                            <a class="card-code-structure" href="https://github.com/winniebosy/Archfirm" target="_blank" rel="noopener noreferrer" aria-label="Archdigest Code Repository">Repository</a>
                         </div>
                     </div>
                 </article>
@@ -157,10 +132,9 @@
             </li>
             <li>
                 <article class="card-two" aria-describedby="card-two-title">
-                    <div class="card-one-imgTwo" role="img" aria-label="An interactive rating card between the range of one to five"></div>
+                    <div class="card-one-imgTwo" role="img" aria-label="An interactive rating card"></div>
                     <div class="card-body ">
-                        <h3 id="card-two-title">Interactive Rating Component </h3>
-
+                        <h3 id="card-two-title">Interactive Rating Component</h3>
                         <div class="card-body">
                             <h2 id="card-two-title">Interactive Rating Component </h2>
                             <p>
@@ -170,8 +144,6 @@
                                 <span>Technologies:</span> HTML(5), CSS3, Javascript, WAI-ARIA techniques, Responsive, Keyboard Interactivity.
                             </p>
                             <div class="project-links">
-                                <a class="card-live-site" href="https://accessible-rating-card.netlify.app/ " aria-label="Rating component live site ">Live Site</a>
-                                <a class="card-code-structure" href="https://github.com/winniebosy/Accessible-interactive-card " aria-label="Rating component Code Repository">Repository</a>
                                 <a class="card-live-site " href="https://accessible-rating-card.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="Rating component live site">Live Site</a>
                                 <a class="card-code-structure" href="https://github.com/winniebosy/Accessible-interactive-card" target="_blank" rel="noopener noreferrer" aria-label="Rating component Code Repository">Repository</a>
                             </div>
@@ -193,8 +165,6 @@
                                 <span>Technologies:</span> HTML(5), CSS3 grid and Flexbox, Javascript, WAI-ARIA techniques, Responsiveness, Keyboard support.
                             </p>
                             <div class="project-links">
-                                <a class="card-live-site" href="https://landing-page-e-learning.netlify.app" aria-label="e-learning live site">Live Site</a>
-                                <a class="card-code-structure" href="https://github.com/winniebosy/e-learning-landing-page" aria-label="e-learning Code Repository">Repository</a>
                                 <a class="card-live-site " href="https://landing-page-e-learning.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="e-learning live site">Live Site</a>
                                 <a class="card-code-structure" href="https://github.com/winniebosy/e-learning-landing-page" target="_blank" rel="noopener noreferrer" aria-label="e-learning Code Repository">Repository</a>
                             </div>
@@ -206,7 +176,6 @@
                     <div class="card-one-imgFour" role="img" aria-label="personal portfolio"></div>
                     <div class="card-body">
                         <h3 id="card-four-title">Personal Portfolio</h3>
-
                         <h2 id="card-four-title">Personal Portfolio</h2>
                         <p>
                             <span>Project Description:</span> Personal project portfolio showcasing my skills and sample projects as an Accessibility Developer.
@@ -215,8 +184,6 @@
                             <span>Technologies:</span> HTML(5), CSS3 grid and Flexbox, Javascript, WAI-ARIA techniques, Responsiveness and keyboard support.
                         </p>
                         <div class="project-links">
-                            <a class="card-live-site" href="https://bosibori.netlify.app/ " aria-label="portfolio live site ">Live Site</a>
-                            <a class="card-code-structure" href="https://github.com/winniebosy/resume " aria-label="portfolio Code Repository"> Repository</a>
                             <a class="card-live-site " href="https://bosibori.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="portfolio live site">Live Site</a>
                             <a class="card-code-structure" href="https://github.com/winniebosy/resume" target="_blank" rel="noopener noreferrer" aria-label="portfolio Code Repository"> Repository</a>
                         </div>
@@ -228,10 +195,8 @@
                     <div class="card-one-imgFive" role="img" aria-label="A fictional podcast landing page"></div>
                     <div class="card-body ">
                         <h3 id="card-five-title">Podcast Landing Page</h3>
-
                         <div class="card-body">
                             <h2 id="card-five-title">Podcast Landing Page</h2>
-
                             <p>
                                 <span>Project Description:</span> A fictional podcast landing page that requires users to validate their email as well as display an error before submission if the email entered is invalid.
                             </p>
@@ -239,9 +204,7 @@
                                 <span>Technologies:</span> HTML(5), CSS3 Grid , Javascript, WAI-ARIA techniques, Responsiveness, Keyboard Support.
                             </p>
                             <div class="project-links">
-                                <a class="card-live-site" href="https://podcast-landing-page.netlify.app/" aria-label="podcast live site">Live Site</a>
-                                <a class="card-code-structure" href="https://github.com/winniebosy/email-validation" aria-label="podcast Code Repository">Repository</a>
-                                <a class="card-live-site " href="https://podcast-landing-page.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="podcast live site">Live Site</a>
+                                <a class="card-live-site" href="https://podcast-landing-page.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="podcast live site">Live Site</a>
                                 <a class="card-code-structure" href="https://github.com/winniebosy/email-validation" target="_blank" rel="noopener noreferrer" aria-label="podcast Code Repository">Repository</a>
                             </div>
                         </div>
