modification of project links

--- a/index.html
+++ b/index.html
@@ -135,19 +135,17 @@
                     <div class="card-one-imgTwo" role="img" aria-label="An interactive rating card"></div>
                     <div class="card-body ">
                         <h3 id="card-two-title">Interactive Rating Component</h3>
-                        <div class="card-body">
-                            <h2 id="card-two-title">Interactive Rating Component </h2>
-                            <p>
-                                <span>Project Description:</span> An interactive rating card component that allows users to rate products or services depending on the level of satisfaction.
-                            </p>
-                            <p>
-                                <span>Technologies:</span> HTML(5), CSS3, Javascript, WAI-ARIA techniques, Responsive, Keyboard Interactivity.
-                            </p>
-                            <div class="project-links">
-                                <a class="card-live-site " href="https://accessible-rating-card.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="Rating component live site">Live Site</a>
-                                <a class="card-code-structure" href="https://github.com/winniebosy/Accessible-interactive-card" target="_blank" rel="noopener noreferrer" aria-label="Rating component Code Repository">Repository</a>
-                            </div>
+                        <p>
+                            <span>Project Description:</span> An interactive rating card component that allows users to rate products or services depending on the level of satisfaction.
+                        </p>
+                        <p>
+                            <span>Technologies:</span> HTML(5), CSS3, Javascript, WAI-ARIA techniques, Responsive, Keyboard Interactivity.
+                        </p>
+                        <div class="project-links">
+                            <a class="card-live-site" href="https://accessible-rating-card.netlify.app/" aria-label="Rating component live site">Live Site</a>
+                            <a class="card-code-structure" href="https://github.com/winniebosy/Accessible-interactive-card" aria-label="Rating component Code Repository">Repository</a>
                         </div>
+                    </div>
                 </article>
             </li>
 
