--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p class="about-desc">
                         I am passionate about developing and creating user interfaces that are accessible,so as to make the internet a leveling field for equal access to information and online services. My career goal is to continue creating and developing websites that are
                         usable and inclusive for everyone.
-                        <p>I am currently open to work and collaborating on both short and long-term projects.</p>
+                        <p>I am currently open to work and collaborate on both short and long-term projects.</p>
                     </p>
                 </div>
             </section>
