--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
                     <li>Accessible Rich Internet Applications(<abbr>ARIA</abbr>)</li>
                     <li>HTML(5)</li>
                     <li>CSS(3) and Sass </li>
-                    I am passionate about developing and creating user interfaces that are accessible,so as to make the internet a leveling field for equal access to information and online services. My career goal is to create and develop websites that are usable and inclusive
-                    for everyone.
-                    </p>
     </div>
     </section>
     <!-- skills and tools section -->
@@ -155,7 +152,6 @@
                     <div class="card-body ">
                         <h3 id="card-three-title"> e-Learning Product Landing Page</h3>
                         <div class="card-body">
-                            <h2 id="card-three-title"> e-Learning Product Landing Page</h2>
                             <p>
                                 <span>Project Description:</span> Product landing page for a fictitious e-learning higher educational institution that allows users to view various courses offered at the institution.
                             </p>
@@ -163,8 +159,8 @@
                                 <span>Technologies:</span> HTML(5), CSS3 grid and Flexbox, Javascript, WAI-ARIA techniques, Responsiveness, Keyboard support.
                             </p>
                             <div class="project-links">
-                                <a class="card-live-site " href="https://landing-page-e-learning.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="e-learning live site">Live Site</a>
-                                <a class="card-code-structure" href="https://github.com/winniebosy/e-learning-landing-page" target="_blank" rel="noopener noreferrer" aria-label="e-learning Code Repository">Repository</a>
+                                <a class="card-live-site " href="https://landing-page-e-learning.netlify.app/" aria-label="e-learning live site">Live Site</a>
+                                <a class="card-code-structure" href="https://github.com/winniebosy/e-learning-landing-page" aria-label="e-learning Code Repository">Repository</a>
                             </div>
                         </div>
                 </article>
@@ -174,7 +170,6 @@
                     <div class="card-one-imgFour" role="img" aria-label="personal portfolio"></div>
                     <div class="card-body">
                         <h3 id="card-four-title">Personal Portfolio</h3>
-                        <h2 id="card-four-title">Personal Portfolio</h2>
                         <p>
                             <span>Project Description:</span> Personal project portfolio showcasing my skills and sample projects as an Accessibility Developer.
                         </p>
@@ -182,8 +177,8 @@
                             <span>Technologies:</span> HTML(5), CSS3 grid and Flexbox, Javascript, WAI-ARIA techniques, Responsiveness and keyboard support.
                         </p>
                         <div class="project-links">
-                            <a class="card-live-site " href="https://bosibori.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="portfolio live site">Live Site</a>
-                            <a class="card-code-structure" href="https://github.com/winniebosy/resume" target="_blank" rel="noopener noreferrer" aria-label="portfolio Code Repository"> Repository</a>
+                            <a class="card-live-site " href="https://bosibori.netlify.app/" aria-label="portfolio live site">Live Site</a>
+                            <a class="card-code-structure" href="https://github.com/winniebosy/resume" aria-label="portfolio Code Repository"> Repository</a>
                         </div>
                     </div>
                 </article>
@@ -194,7 +189,6 @@
                     <div class="card-body ">
                         <h3 id="card-five-title">Podcast Landing Page</h3>
                         <div class="card-body">
-                            <h2 id="card-five-title">Podcast Landing Page</h2>
                             <p>
                                 <span>Project Description:</span> A fictional podcast landing page that requires users to validate their email as well as display an error before submission if the email entered is invalid.
                             </p>
@@ -202,8 +196,8 @@
                                 <span>Technologies:</span> HTML(5), CSS3 Grid , Javascript, WAI-ARIA techniques, Responsiveness, Keyboard Support.
                             </p>
                             <div class="project-links">
-                                <a class="card-live-site" href="https://podcast-landing-page.netlify.app/" target="_blank" rel="noopener noreferrer" aria-label="podcast live site">Live Site</a>
-                                <a class="card-code-structure" href="https://github.com/winniebosy/email-validation" target="_blank" rel="noopener noreferrer" aria-label="podcast Code Repository">Repository</a>
+                                <a class="card-live-site" href="https://podcast-landing-page.netlify.app/" aria-label="podcast live site">Live Site</a>
+                                <a class="card-code-structure" href="https://github.com/winniebosy/email-validation" aria-label="podcast Code Repository">Repository</a>
                             </div>
                         </div>
                 </article>
@@ -246,15 +240,7 @@
         <div class="top-arrow">
             <a href="#home">
                 <span aria-hidden="true" class="footer-arrow">🠉</span> Back to Top
-                <a class="footer-link" href="mailto:winniebosy@gmail.com">
-                    <img class="img-2" src="Assests/Images/3586360_email_envelope_mail_send_icon.svg" alt="Contact mail">
-                </a>
-                <small> Winnie Bosibori &#169;2022</small>
-                <div class="top-arrow">
-                    <a href="#home">
-                        <span aria-hidden="true">&#8593;</span> Back to Top
-                    </a>
-                </div>
+        </div>
     </footer>
 
     </div>
