--- a/index.html
+++ b/index.html
@@ -23,41 +23,41 @@
     </a>
             </div>
             <!-- skip link ends here -->
-            <!-- navigation -->
-            <nav class="nav-navigation" aria-label="Main Navigation">
-                <div class="navbar-container">
-                    <a class="navbar-brand" href="#home" id="home" aria-label="Home">
-                        <span aria-hidden="true" class="logo-name">WB</span>
-                        <button id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
+        </header>
+        <!-- navigation -->
+        <nav class="nav-navigation" aria-label="Main Navigation">
+            <div class="navbar-container">
+                <a class="navbar-brand" href="#home" id="logo-home" aria-label="Home">
+                    <span aria-hidden="true" class="logo-name">WB</span>
+                    <button id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
                             <span class ="hamburger-menu" aria-hidden="true">&#9776</span>
                                   Menu
             </button>
-                </div>
-                <!-- navigation menu -->
-                <ul class="navbar-nav hide" id="mobile-nav-menu" data-state="closed">
-                    <li class="navbar-list">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="navbar-list">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="navbar-list">
-                        <a class="nav-link" href="#contacts">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- hero section starts here -->
+            </div>
+            <!-- navigation menu -->
+            <ul class="navbar-nav hide" id="mobile-nav-menu" data-state="closed">
+                <li class="navbar-list">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="navbar-list">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="navbar-list">
+                    <a class="nav-link" href="#contacts">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- hero section starts here -->
+
+        <!-- main content -->
+
+        <main id="main" aria-labelledby="main-section-heading">
             <section class="hero-section" aria-describedby="Introduction">
                 <p class="hero-information" id="Introduction">
                     <span class="hero-title-name"> Hi, I'm Winnie Bosibori.</span>
                     <span class="hero-title-tag">I create accessible frontend technologies.</span>
                 </p>
             </section>
-        </header>
-
-        <!-- main content -->
-
-        <main id="main" aria-labelledby="main-section-heading">
             <h1 id="main-section-heading">Portfolio</h1>
             <section id="about" class="about-section" aria-describedby="about-section">
                 <div class="profile-img" role="img" aria-label="Winnie wearing striped black and white hoodie"></div>
@@ -212,20 +212,22 @@
     <footer id="contacts" aria-describedby="contact-section">
         <!-- footer section -->
         <h2 id="contact-section">Get in Touch </h2>
-        <a class="footer-link" href="mailto:winniebosy@gmail.com">
-            <img class="img-2" src="Assests/Images/3586360_email_envelope_mail_send_icon.svg" alt="Contact mail">
-        </a>
-        <a href="https://www.linkedin.com/in/winnie-bosibori-b37601141/">
-            <img class="img-1" src="Assests/Images/6214710_linkedin_logo_icon.svg" alt="My_linkedIn_profile">
-        </a>
-        <a href="https://github.com/winniebosy">
-            <img class="img-1" src="Assests/Images/8666686_github_icon.svg" alt="My_github_profile">
-        </a>
+        <div class="footer-contacts">
+            <a class="footer-link" href="mailto:winniebosy@gmail.com">
+                <img class="img-2" src="Assests/Images/3586360_email_envelope_mail_send_icon.svg" alt="Contact mail">
+            </a>
+            <a href="https://www.linkedin.com/in/winnie-bosibori-b37601141/">
+                <img class="img-1" src="Assests/Images/6214710_linkedin_logo_icon.svg" alt="My_linkedIn_profile">
+            </a>
+            <a href="https://github.com/winniebosy">
+                <img class="img-1" src="Assests/Images/8666686_github_icon.svg" alt="My_github_profile">
+            </a>
 
-        <a href="https://codepen.io/winysummer">
-            <img class="img-1" src="Assests/Images/2701148_code_codepen_css_html_javascript_icon.svg" alt="my_codepen_profile">
-        </a>
-        <div></div>
+            <a href="https://codepen.io/winysummer">
+                <img class="img-1" src="Assests/Images/2701148_code_codepen_css_html_javascript_icon.svg" alt="my_codepen_profile">
+            </a>
+            <div></div>
+        </div>
 
         <nav class="a11y-webring-club" aria-labelledby="a11y-webring-club">
             <h2 id="a11y-webring-club">a11y-webring.club</h2>
@@ -236,11 +238,13 @@
                 <li><a rel="next external " href="https://a11y-webring.club/next">Next website</a></li>
             </ul>
         </nav>
-        <small> Winnie Bosibori &#169;2023</small>
+
         <div class="top-arrow">
             <a href="#home">
                 <span aria-hidden="true" class="footer-arrow">🠉</span> Back to Top
+            </a>
         </div>
+        <small> Winnie Bosibori &#169;2023</small>
     </footer>
 
     </div>
