--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
         <!-- navigation -->
         <nav class="nav-navigation" aria-label="Main Navigation">
-            <div class="navbar-container">
+            <div class="navbar-container" id="home">
                 <a class="navbar-brand" href="#home" id="logo-home" aria-label="Home">
                     <span aria-hidden="true" class="logo-name">WB</span>
                     <button id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
@@ -37,7 +37,7 @@
             <!-- navigation menu -->
             <ul class="navbar-nav hide" id="mobile-nav-menu" data-state="closed">
                 <li class="navbar-list">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="#main">About</a>
                 </li>
                 <li class="navbar-list">
                     <a class="nav-link" href="#projects">Projects</a>
@@ -109,7 +109,7 @@
     </section>
     <!-- projects section -->
     <section id="projects" aria-describedby="projects-section">
-        <h2 id="projects-section">Projects</h2>
+        <h2 id="projects-section">Sample Projects</h2>
         <!-- project cards -->
         <ul class="cards">
             <li>
