--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <!-- navigation -->
         <nav class="nav-navigation" aria-label="Main Navigation">
             <div class="navbar-container" id="home">
-                <a class="navbar-brand" href="#home" id="logo-home" aria-label="Home">
-                    <span aria-hidden="true" class="logo-name">WB</span>
-                    <button id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
+                <div class="logo-container">
+                    <a class="navbar-brand" href="#home" id="logo-home" aria-label="Home">
+                        <span aria-hidden="true" class="logo-name">WB</span>
+                </div>
+                <button class="navbar-toggler" id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
                             <span class ="hamburger-menu" aria-hidden="true">&#9776</span>
                                   Menu
             </button>
