--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         </header>
         <!-- navigation -->
         <nav class="nav-navigation" aria-label="Main Navigation">
-            <div class="navbar-container" id="home">
-                <div class="logo-container">
-                    <a class="navbar-brand" href="#home" id="logo-home" aria-label="Home">
-                        <span aria-hidden="true" class="logo-name">WB</span>
-                </div>
-                <button class="navbar-toggler" id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
+
+            <div class="logo-container">
+                <a class="navbar-brand" href="#" id="logo-home" aria-label="Home">
+                    <span aria-hidden="true" class="logo-name">WB</span> </a>
+            </div>
+            <button class="navbar-toggler" id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
                             <span class ="hamburger-menu" aria-hidden="true">&#9776</span>
                                   Menu
             </button>
-            </div>
+
             <!-- navigation menu -->
             <ul class="navbar-nav hide" id="mobile-nav-menu" data-state="closed">
                 <li class="navbar-list">
@@ -60,6 +60,7 @@
                     <span class="hero-title-tag">I create accessible frontend technologies.</span>
                 </p>
             </section>
+
             <h1 id="main-section-heading">Portfolio</h1>
             <section id="about" class="about-section" aria-describedby="about-section">
                 <div class="profile-img" role="img" aria-label="Winnie wearing striped black and white hoodie"></div>
@@ -242,7 +243,7 @@
         </nav>
 
         <div class="top-arrow">
-            <a href="#home">
+            <a href="#">
                 <span aria-hidden="true" class="footer-arrow">🠉</span> Back to Top
             </a>
         </div>
