focus states for mobile

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
         </header>
         <!-- navigation -->
         <nav class="nav-navigation" aria-label="Main Navigation">
-
-            <div class="logo-container">
-                <a class="navbar-brand" href="#" id="logo-home" aria-label="Home">
-                    <span aria-hidden="true" class="logo-name">WB</span> </a>
-            </div>
-            <button class="navbar-toggler" id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
+            <div class="nav-container-mobile">
+                <div class="logo-container">
+                    <a class="navbar-brand" href="#" id="logo-home" aria-label="Home">
+                        <span aria-hidden="true" class="logo-name">WB</span></a>
+                </div>
+                <button class="navbar-toggler" id="navbar-toggler" aria-expanded="false" aria-controls="mobile-nav-menu">
                             <span class ="hamburger-menu" aria-hidden="true">&#9776</span>
                                   Menu
             </button>
+            </div>
+
 
             <!-- navigation menu -->
             <ul class="navbar-nav hide" id="mobile-nav-menu" data-state="closed">
