--- a/index.html
+++ b/index.html
@@ -211,9 +211,8 @@
     </section>
 
     <!-- project section ends here  -->
-
-
     </main>
+    <!-- main ends here -->
     <footer id="contacts" aria-describedby="contact-section">
         <!-- footer section -->
         <h2 id="contact-section">Get in Touch </h2>
